
package mysql;

message tb_role_levels{
    required uint32 role_id = 1;
    required uint32 time = 2;
    required uint32 new_level = 3;
    required uint32 old_level = 4;
    required uint32 new_power = 5;
    required uint32 old_power = 6;
    required uint32 cur_level = 7;
    required bytes levels = 8;
}
